--- a/src/index.css
+++ b/src/index.css
@@ -11,12 +11,33 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-.favButton{
-  background-color: rgba(136, 136, 136, 0.116);
-  padding: 10px;
-  border: none;
-  width: 100%;
-  cursor: pointer;
+
+/* <------ */ /* HEADER */ /* ------> */
+
+.nav-container{
+  background-color: #f2f2f2;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20vw;
+  position: sticky;
+  top: 0;
+  gap:400px;
+}
+
+.nav-item-title{
+  justify-content: start;
+  font-size: 1.5rem;
+  white-space: nowrap;
+}
+
+.nav-item-title span{
+  color: red;
+}
+
+nav{
+  display: flex;
+  padding: 10px 0;
 }
 
 h1{
@@ -40,6 +61,7 @@ a:hover{
   color: rgb(136, 136, 136);
 } 
 
+/* <------ */ /* FOOTER */ /* ------> */
 footer {
   display: flex;
   justify-content: center;
@@ -60,7 +82,43 @@ footer > p{
   margin: 0;
   padding-top: 0.7rem;
 }
+footer button{
+  background-color: red;
+  color: white;
+  border: none;
+  height: 2rem;
+}
 
+footer button:hover{
+  background-color: rgb(235, 31, 31);
+}
+footer > div{
+  display: flex;
+  justify-content: space-between;
+  padding: 0 20vw;
+}
+
+footer > * > * > img {
+  width: 200px;
+  margin: 0;
+}
+
+.social-media {
+  display: flex;
+}
+
+.social-icons{
+  display: flex;
+  filter: grayscale(75%);
+}
+.icon{
+  width: 50px;
+  height: 50px;
+  gap: 8px;
+  filter: invert(0.4) sepia(0) grayscale(100%) saturate(0%);
+
+}
+/* <------ */ /* FORM */ /* ------> */
 form{
   display: flex;
   flex-direction: column;
@@ -69,6 +127,13 @@ form{
   height: 100px;
   margin: 0 auto;
 }
+input {
+  width: 100%;
+}
+input::placeholder {
+  color: rgb(7, 7, 7); /* Change the color to a visible color */
+}
+
 
 .card{
   display: flex;
@@ -94,6 +159,16 @@ form{
   margin: 0 auto;
 }
 
+.favButton{
+  background-color: rgba(136, 136, 136, 0.116);
+  padding: 10px;
+  border: none;
+  width: 100%;
+  cursor: pointer;
+}
+
+/* <------ */ /* OTHERS */ /* ------> */
+
 table {
  border-collapse: collapse;
     border-spacing: 0;
@@ -113,10 +188,42 @@ tr:nth-child(even) {
   background-color: #dddddd;
 }
 
+/* <------ */ /* THEME */ /* ------> */
+
 .dark{
   background-color: #12121296;
   color: white;
 }
-.dark > a {
-  color: white;
+
+.app-theme.light {
+
+  background-color: #f5f5f5;
+  color: #333333;
+}
+
+.app-theme.dark {
+  background-color: #5e5e5e;
+  color: #f5f5f5;
+}
+
+.app-theme.dark .card{
+  border: 0.5px solid rgb(192, 192, 192);
+  color: #f5f5f5;
+}
+
+.app-theme.dark .nav-container{
+  background-color: #000000;
+}
+
+.app-theme.dark a{
+  color: #fff;
+}
+
+.app-theme.dark .toggle{
+  background-color: #fff;
+  border: none;
+}
+
+.app-theme.dark .icon{
+  filter: none;
 }
